--- a/example-02.html
+++ b/example-02.html
@@ -21,41 +21,39 @@
 	<script src="scripts/less.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<div><h1>Lorem Ipsum</h1>
-	</div>
 	
 	<div class="container">
 		<ul class="columns">
 			<li class="column thumb">
 				<div class="thumb-frame">
-					<img src="images/placeholder-gray.gif" width="200" height="50" />
+					<img src="images/placeholder-gray.gif" />
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum eros in ipsum iaculis
 					a gravida turpis elementum.</p>
 				</div>
 			</li><!-- 
 			 --><li class="column thumb">
 				<div class="thumb-frame">
-					<img src="images/placeholder-gray.gif" width="200" height="100" />
+					<img src="images/placeholder-gray.gif" />
 					<p>Aenean ullamcorper vehicula pretium. Praesent venenatis, massa at ullamcorper molestie, mi
 					tellus vulputate odio, quis fringilla arcu leo eget eros.</p>
 				</div>
 			</li><!-- 
 			 --><li class="column thumb">
 				<div class="thumb-frame">
-					<img src="images/placeholder-gray.gif" width="200" height="100" />
+					<img src="images/placeholder-gray.gif" />
 					<p>Ut at nisl quis nisl rutrum pretium, consectetur adipiscing elit. Integer rutrum eros in ipsum iaculis
 					a gravida turpis elementum.</p>
 				</div>
 			</li><!-- 
 			 --><li class="column thumb">
 				<div class="thumb-frame">
-					<img src="images/placeholder-gray.gif" width="200" height="100" />
+					<img src="images/placeholder-gray.gif" />
 					<p>Lorem ispum dolor sit amnet.</p>
 				</div>
 			</li><!-- 
 			 --><li class="column thumb">
 				<div class="thumb-frame">
-					<img src="images/placeholder-gray.gif" width="200" height="100" />
+					<img src="images/placeholder-gray.gif" />
 					<p>Lorem ispum dolor sit amnet.</p>
 				</div>
 			</li>
