adding initial opacity to .extras

--- a/example-02.html
+++ b/example-02.html
@@ -27,34 +27,34 @@
 			<li class="column thumb">
 				<div class="thumb-frame">
 					<img src="images/placeholder-gray.gif" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum eros in ipsum iaculis
+					<p class="extras">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum eros in ipsum iaculis
 					a gravida turpis elementum.</p>
 				</div>
 			</li><!-- 
 			 --><li class="column thumb">
 				<div class="thumb-frame">
 					<img src="images/placeholder-gray.gif" />
-					<p>Aenean ullamcorper vehicula pretium. Praesent venenatis, massa at ullamcorper molestie, mi
+					<p class="extras">Aenean ullamcorper vehicula pretium. Praesent venenatis, massa at ullamcorper molestie, mi
 					tellus vulputate odio, quis fringilla arcu leo eget eros.</p>
 				</div>
 			</li><!-- 
 			 --><li class="column thumb">
 				<div class="thumb-frame">
 					<img src="images/placeholder-gray.gif" />
-					<p>Ut at nisl quis nisl rutrum pretium, consectetur adipiscing elit. Integer rutrum eros in ipsum iaculis
+					<p class="extras">Ut at nisl quis nisl rutrum pretium, consectetur adipiscing elit. Integer rutrum eros in ipsum iaculis
 					a gravida turpis elementum.</p>
 				</div>
 			</li><!-- 
 			 --><li class="column thumb">
 				<div class="thumb-frame">
 					<img src="images/placeholder-gray.gif" />
-					<p>Lorem ispum dolor sit amnet.</p>
+					<p class="extras">Lorem ispum dolor sit amnet.</p>
 				</div>
 			</li><!-- 
 			 --><li class="column thumb">
 				<div class="thumb-frame">
 					<img src="images/placeholder-gray.gif" />
-					<p>Lorem ispum dolor sit amnet.</p>
+					<p class="extras">Lorem ispum dolor sit amnet.</p>
 				</div>
 			</li>
 		</ul>
