--- a/gallery-04.html
+++ b/gallery-04.html
@@ -22,40 +22,36 @@
 	<script src="scripts/less.min.js" type="text/javascript"></script>
 </head>
 <body>
-	
 	<div class="container">
 		<ul class="columns">
 			<li class="column thumb">
 				<div class="thumb-frame">
-				  <a href="gallery-01.html">
-					  <img src="images/KasiaRafal.png" />
-					  <p class="extras">Kuchnia Kasi i Rafała.</p>
-					</a>
+				  <a href="images/Lazienka-Mariusz/-_DSC0788.jpg">
+  					<img src="images/Lazienka-Mariusz/-_DSC0788.png" />
+  				</a>
 				</div>
 			</li>
 			<li class="column thumb">
 				<div class="thumb-frame">
-				  <a href="gallery-02.html">
-					  <img src="images/Marek.png" />
-					  <p class="extras">Kuchnia pana Marka.</p>
-					</a>
+				  <a href="images/Lazienka-Mariusz/-_DSC0787.jpg">
+  					<img src="images/Lazienka-Mariusz/-_DSC0787.png" />
+  				</a>
 				</div>
 			</li>
 			<li class="column thumb">
 				<div class="thumb-frame">
-				  <a href="gallery-03.html">
-					  <img src="images/Judyta.png" />
-					  <p class="extras">Kuchnia pani Judyty.</p>
-					</a>
+				  <a href="images/Lazienka-Mariusz/-_DSC080-.jpg">
+  					<img src="images/Lazienka-Mariusz/-_DSC080-.png" />
+  				</a>
 				</div>
 			</li>
 			<li class="column thumb">
 				<div class="thumb-frame">
-				  <a href="gallery-04.html">
-  					<img src="images/Mariusz.png" />
-	  				<p class="extras">Łazienka Mariusza.</p>
-	  		  </a>
+				  <a href="images/Lazienka-Mariusz/-_DSC0797.jpg">
+  					<img src="images/Lazienka-Mariusz/-_DSC0797.png" />
+  				</a>
 				</div>
+			</li>
 		</ul>
 	</div>
 </body>
