Adding comments between <li>

--- a/gallery-04.html
+++ b/gallery-04.html
@@ -30,22 +30,22 @@
   					<img src="images/Lazienka-Mariusz/-_DSC0788.png" />
   				</a>
 				</div>
-			</li>
-			<li class="column thumb">
+			</li><!-- 
+			 --><li class="column thumb">
 				<div class="thumb-frame">
 				  <a href="images/Lazienka-Mariusz/-_DSC0787.jpg">
   					<img src="images/Lazienka-Mariusz/-_DSC0787.png" />
   				</a>
 				</div>
-			</li>
-			<li class="column thumb">
+			</li><!-- 
+			 --><li class="column thumb">
 				<div class="thumb-frame">
 				  <a href="images/Lazienka-Mariusz/-_DSC080-.jpg">
   					<img src="images/Lazienka-Mariusz/-_DSC080-.png" />
   				</a>
 				</div>
-			</li>
-			<li class="column thumb">
+			</li><!-- 
+			 --><li class="column thumb">
 				<div class="thumb-frame">
 				  <a href="images/Lazienka-Mariusz/-_DSC0797.jpg">
   					<img src="images/Lazienka-Mariusz/-_DSC0797.png" />
