--- a/gallery.html
+++ b/gallery.html
@@ -32,24 +32,24 @@
 					  <p class="extras">Kuchnia Kasi i Rafała.</p>
 					</a>
 				</div>
-			</li>
-			<li class="column thumb">
+			</li><!-- 
+			 --><li class="column thumb">
 				<div class="thumb-frame">
 				  <a href="gallery-02.html">
 					  <img src="images/Marek.png" />
 					  <p class="extras">Kuchnia pana Marka.</p>
 					</a>
 				</div>
-			</li>
-			<li class="column thumb">
+			</li><!-- 
+			 --><li class="column thumb">
 				<div class="thumb-frame">
 				  <a href="gallery-03.html">
 					  <img src="images/Judyta.png" />
 					  <p class="extras">Kuchnia pani Judyty.</p>
 					</a>
 				</div>
-			</li>
-			<li class="column thumb">
+			</li><!-- 
+			 --><li class="column thumb">
 				<div class="thumb-frame">
 				  <a href="gallery-04.html">
   					<img src="images/Mariusz.png" />
