Added lost commit

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	<div class="hero" style="overflow: hidden;">
 		<div class="container">
 			<img src="images/hero.jpg" style="float: right;" />
-			<h1>Projektowanie Wnetrz</h1>
-			<h2>Fu Szmu, Bajery!</h2>
+			<h1>Projektowanie Wnętrz</h1>
+			<h2>mgr inż. arch. Renata Kowalczuk</h2>
 		</div>
 	</div>
 	<div class="topbar" style="position: relative;">
