--- a/index-new.html
+++ b/index-new.html
@@ -43,7 +43,7 @@
 	<div class="container">
 		<div class="columns">
 			<div class="column" style="text-align:center; margin: 20px 0">
-				<h2 style="">Renata Kowalczuk - Projektowanie Wnetrz</h2>
+				<h2 style="">Renata Kowalczuk</h2>
 				<p class="subcaption">Jakiś chwytliwy tekst</p>
 			</div>
 		</div>
@@ -51,30 +51,44 @@
 
 	<div class="columns" style="padding-top: 40px; padding-bottom: 40px;">
 		<div class="column one-third">
-			<img src="images/index/1.jpg" />
-			<h4 class="caption">Kuchnia</h4>
-			<p class="subcaption">Kasia i Rafał</p>
+			<div class="gallery-item">
+				<img src="images/index/1.jpg" />
+				<h4 class="caption">Kuchnia</h4>
+				<p class="subcaption">Kasia i Rafał, 2013</p>
+			</div>
 		</div><!-- 
 		--><div class="column one-third">
-			<img src="images/index/2.jpg" />
-			<h4 class="caption">Kuchnia</h4>
-			<p class="subcaption">Ewa i Tomek 2012</p>
+			<div class="gallery-item">
+				<img src="images/index/2.jpg" />
+				<h4 class="caption">Kuchnia</h4>
+				<p class="subcaption">Ewa i Tomek, 2012</p>
+			</div>
 		</div><!-- 
 		--><div class="column one-third">
-			<img src="images/index/3.jpg" />
-			<h4 class="caption">Łazienka</h4>
-			<p class="subcaption">Marian</p>
+			<div class="gallery-item">
+				<img src="images/index/3.jpg" />
+				<h4 class="caption">Łazienka</h4>
+				<p class="subcaption">Mariusz, 2012</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class="container">
+		<div class="columns" style="margin: 20px 0">
+			<div class="column two-thirds" style="margin-left: 16%;text-align:center;">
+				<p class="subcaption">Myślę i główkuję. Poszukuję i ćwiczę wyobraźnie. Efektem mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
+			</div>
 		</div>
 	</div>
 
-	<div class="footer">
+	<div class="footer" style="margin-top: 40px;">
 		<div class="container">
 			<div class="columns">
 				<div class="column two-thirds">
 				</div><!-- 
 				--><div class="column one-third">
 					<p>
-						&copy; Renata Kowalczuk 2013<br />
+						mgr inż. arch. Renata Kowalczuk<br />
 						telefon: 502 123 456<br />
 						email: kontakt@renata-kowalczuk
 					</p>
