Scary green footer

--- a/index-new.html
+++ b/index-new.html
@@ -36,15 +36,15 @@
 </head>
 <body style="padding-top:80px">
 	<div class="topbar">
-		<img class="logo" src="images/logo.png" />
+		<img class="logo" src="images/logo08.png" />
 	</div>
 	
 	<!-- BODY -->
 	<div class="container">
 		<div class="columns">
 			<div class="column" style="text-align:center; margin: 20px 0">
-				<h2 style="">Renata Kowalczuk</h2>
-				<p class="subcaption">Jakiś chwytliwy tekst</p>
+				<h1 style="">Projektowanie Wnętrz</h2>
+				<p class="subcaption">mgr inż. arch. Renata Kowalczuk</p>
 			</div>
 		</div>
 	</div>
@@ -89,8 +89,8 @@
 				--><div class="column one-third">
 					<p>
 						mgr inż. arch. Renata Kowalczuk<br />
-						telefon: 502 123 456<br />
-						email: kontakt@renata-kowalczuk
+						telefon: 512 149 366<br />
+						email: info@renata-kowalczuk.eu
 					</p>
 				</div>
 			</div>
