updating footer styles

--- a/index-new.html
+++ b/index-new.html
@@ -88,7 +88,7 @@
 					<p class="name">mgr inż. arch. Renata Kowalczuk</p>
 				</div><!-- 
 				--><div class="column one-third">
-					<span class="footer-logo">RENATA KOWALCZUK</span>
+					<span class="footer-logo">STUDIO PROJEKTOWE</span>
 				</div><!--
 				--><div class="column one-third" style="text-align: right;">
 					<p>
