--- a/index-new.html
+++ b/index-new.html
@@ -52,21 +52,21 @@
 	<div class="columns" style="padding-top: 40px; padding-bottom: 40px;">
 		<div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/1.jpg" />
+				<img src="images/index/1.png" />
 				<h4 class="caption">Kuchnia</h4>
 				<p class="subcaption">Kasia i Rafał, 2013</p>
 			</div>
 		</div><!-- 
 		--><div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/2.jpg" />
+				<img src="images/index/2-2.jpg" />
 				<h4 class="caption">Kuchnia</h4>
 				<p class="subcaption">Ewa i Tomek, 2012</p>
 			</div>
 		</div><!-- 
 		--><div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/3.jpg" />
+				<img src="images/index/3.png" />
 				<h4 class="caption">Łazienka</h4>
 				<p class="subcaption">Mariusz, 2012</p>
 			</div>
