--- a/index-new.html
+++ b/index-new.html
@@ -52,7 +52,7 @@
 	<div class="columns" style="padding-top: 40px; padding-bottom: 40px;">
 		<div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/1.png" />
+				<img src="images/index/1.jpg" />
 				<h4 class="caption">Kuchnia</h4>
 				<p class="subcaption">Kasia i Rafał, 2013</p>
 			</div>
@@ -66,7 +66,7 @@
 		</div><!-- 
 		--><div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/3.png" />
+				<img src="images/index/3.jpg" />
 				<h4 class="caption">Łazienka</h4>
 				<p class="subcaption">Mariusz, 2012</p>
 			</div>
