Work in progess

--- a/index-new.html
+++ b/index-new.html
@@ -38,7 +38,7 @@
 	<div class="topbar">
 		<img class="logo" src="images/logo08.png" />
 	</div>
-	
+
 	<!-- BODY -->
 	<div class="container">
 		<div class="columns">
@@ -52,27 +52,27 @@
 	<div class="columns" style="padding-top: 40px; padding-bottom: 40px;">
 		<div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/1.jpg" />
-				<h4 class="caption">Kuchnia</h4>
-				<p class="subcaption">Kasia i Rafał, 2013</p>
+				<img src="images/index/3a.png" />
+				<h4 class="caption">Wnętrza współczesne</h4>
+				<!--<p class="subcaption">Kasia i Rafał, 2013</p>-->
 			</div>
 		</div><!-- 
 		--><div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/2-2.jpg" />
-				<h4 class="caption">Kuchnia</h4>
-				<p class="subcaption">Ewa i Tomek, 2012</p>
+				<img src="images/index/2a.png" />
+				<h4 class="caption">Wnętrza stylizowane</h4>
+				<!--<p class="subcaption">Ewa i Tomek, 2012</p>-->
 			</div>
 		</div><!-- 
 		--><div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/3.jpg" />
-				<h4 class="caption">Łazienka</h4>
-				<p class="subcaption">Mariusz, 2012</p>
+				<img src="images/index/1a.png" />
+				<h4 class="caption">Wnętrza klasyczne</h4>
+				<!--<p class="subcaption">Mariusz, 2012</p>-->
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="container arrow_box">
 		<div class="columns" style="margin: 20px 0">
 			<div class="column one-half" style="margin-left: 25%;text-align:center;">
@@ -85,15 +85,16 @@
 		<div class="container">
 			<div class="columns">
 				<div class="column one-third">
-					<p class="name">mgr inż. arch. Renata Kowalczuk</p>
+					<!--<p class="name">mgr inż. arch. Renata Kowalczuk</p>-->
 				</div><!-- 
 				--><div class="column one-third">
-					<span class="footer-logo">STUDIO PROJEKTOWE</span>
+					<!--<span class="footer-logo">STUDIO PROJEKTOWE</span>-->
 				</div><!--
 				--><div class="column one-third" style="text-align: right;">
 					<p>
+						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
 						telefon: 512 149 366<br />
-						email: info@renata-kowalczuk.eu
+						email: <a href="mailto:info@renata-kowalczuk.eu">info@renata-kowalczuk.eu</a>
 					</p>
 				</div>
 			</div>
