another version of homepage

--- a/index-new.html
+++ b/index-new.html
@@ -36,10 +36,40 @@
 </head>
 <body style="padding-top:80px">
 	<div class="topbar">
+		<div class="container">
 		<img class="logo" src="images/logo08.png" />
+		</div>
 	</div>
-	
+
+	<div class="columns gallery">
+		<div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/1.jpg" />
+				<!-- 
+				 -->
+				<h4 class="caption">Wnętrza <b>współczesne</b></h4>
+			</div>
+		</div><!-- 
+		--><div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/2.jpg" />
+				<!-- 
+				 -->
+				<h4 class="caption">Wnętrza <b>stylizowane</b></h4>
+			</div>
+		</div><!-- 
+		--><div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/3.jpg" />
+				<!-- 
+				 -->
+				<h4 class="caption">Wnętrza <b>klasyczne</b></h4>
+			</div>
+		</div>
+	</div>
+
 	<!-- BODY -->
+	<!-- 
 	<div class="container">
 		<div class="columns">
 			<div class="column hero" style="text-align:center; margin: 20px 0">
@@ -48,35 +78,15 @@
 			</div>
 		</div>
 	</div>
+	 -->
 
-	<div class="columns" style="padding-top: 40px; padding-bottom: 40px;">
-		<div class="column one-third">
-			<div class="gallery-item">
-				<img src="images/index/1.jpg" />
-				<h4 class="caption">Kuchnia</h4>
-				<p class="subcaption">Kasia i Rafał, 2013</p>
-			</div>
-		</div><!-- 
-		--><div class="column one-third">
-			<div class="gallery-item">
-				<img src="images/index/2.jpg" />
-				<h4 class="caption">Kuchnia</h4>
-				<p class="subcaption">Ewa i Tomek, 2012</p>
-			</div>
-		</div><!-- 
-		--><div class="column one-third">
-			<div class="gallery-item">
-				<img src="images/index/3.jpg" />
-				<h4 class="caption">Łazienka</h4>
-				<p class="subcaption">Mariusz, 2012</p>
-			</div>
-		</div>
-	</div>
 	
 	<div class="container arrow_box">
 		<div class="columns" style="margin: 20px 0">
-			<div class="column one-half" style="margin-left: 25%;text-align:center;">
-				<p class="subcaption">Myślę i główkuję. Poszukuję i ćwiczę wyobraźnie. Efektem mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
+			<div class="column">
+				<h2>Projektowanie Wnętrz</h2>
+				<p>Myślę i główkuję. Poszukuję i ćwiczę wyobraźnie. 
+				<a href="#" class="link">Efektem</a> mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
 			</div>
 		</div>
 	</div>
@@ -85,13 +95,16 @@
 		<div class="container">
 			<div class="columns">
 				<div class="column one-third">
-					<p class="name">mgr inż. arch. Renata Kowalczuk</p>
+					
 				</div><!-- 
 				--><div class="column one-third">
+				<!-- 
 					<span class="footer-logo">STUDIO PROJEKTOWE</span>
+				 -->
 				</div><!--
 				--><div class="column one-third" style="text-align: right;">
 					<p>
+						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
 						telefon: 502 123 456<br />
 						email: kontakt@renata-kowalczuk
 					</p>
