--- a/index.html
+++ b/index.html
@@ -34,38 +34,83 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
-<body>
-	<div class="hero" style="overflow: hidden;">
+<body style="padding-top:80px">
+	<div class="topbar">
 		<div class="container">
-			<img src="images/hero.jpg" style="float: right;" />
-			<h1>Projektowanie Wnętrz</h1>
-			<h2>mgr inż. arch. Renata Kowalczuk</h2>
+		<img class="logo" src="images/logo.png" />
 		</div>
 	</div>
-	<div class="topbar" style="position: relative;">
-		<ul class="navigation">
-			<li><a href="">galeria</a></li>
-			<li><a href="">kontakt</a></li>
-		</ul>
-	</div>
-	
-	<!-- BODY -->
-	<div class="container">
-		<div class="columns">
-			<div class="column one-third">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In egestas tortor dignissim nulla viverra at dignissim nibh iaculis. Donec in hendrerit lacus. Ut eu lorem lectus. Ut vel ligula ligula. Sed sit amet porttitor lorem. Aliquam erat volutpat. Etiam eget vehicula odio. Maecenas hendrerit nulla vel tortor iaculis id semper purus vestibulum.</p>
-			</div><!-- 
-			--><div class="column one-third">
-				<p>Phasellus malesuada gravida ante. Nam sed dolor id sapien lacinia euismod sit amet eget neque. Integer tempus facilisis leo, vel malesuada elit blandit id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas accumsan ullamcorper consectetur. Suspendisse nec eros dolor, eget rutrum turpis. Donec eget cursus purus. Cras urna augue, accumsan non lobortis blandit, vulputate sit amet sapien.</p>
-			</div><!-- 
-			--><div class="column one-third">
-				<p>Phasellus malesuada gravida ante. Nam sed dolor id sapien lacinia euismod sit amet eget neque. Integer tempus facilisis leo, vel malesuada elit blandit id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas accumsan ullamcorper consectetur. Suspendisse nec eros dolor, eget rutrum turpis. Donec eget cursus purus. Cras urna augue, accumsan non lobortis blandit, vulputate sit amet sapien.</p>
+
+	<div class="columns gallery">
+		<div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/1.jpg" />
+				<!-- 
+				 -->
+				<h4 class="caption">Wnętrza <b>współczesne</b></h4>
+			</div>
+		</div><!-- 
+		--><div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/2.jpg" />
+				<!-- 
+				 -->
+				<h4 class="caption">Wnętrza <b>stylizowane</b></h4>
+			</div>
+		</div><!-- 
+		--><div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/3.jpg" />
+				<!-- 
+				 -->
+				<h4 class="caption">Wnętrza <b>klasyczne</b></h4>
 			</div>
 		</div>
 	</div>
 
-	<div class="container footer">
-		<p>&copy; Renata Kowalczuk 2013</p>
+	<!-- BODY -->
+	<!-- 
+	<div class="container">
+		<div class="columns">
+			<div class="column hero" style="text-align:center; margin: 20px 0">
+				<h2>Projektowanie Wnętrz</h2>
+				<p>mgr inż. arch. Renata Kowalczuk</p>
+			</div>
+		</div>
+	</div>
+	 -->
+
+	
+	<div class="container arrow_box">
+		<div class="columns" style="margin: 20px 0">
+			<div class="column">
+				<h2>Projektowanie Wnętrz</h2>
+				<p>Myślę i główkuję. Poszukuję i ćwiczę wyobraźnie. 
+				<a href="#" class="link">Efektem</a> mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="footer" style="margin-top: 40px;">
+		<div class="container">
+			<div class="columns">
+				<div class="column one-third">
+					
+				</div><!-- 
+				--><div class="column one-third">
+				<!-- 
+					<span class="footer-logo">STUDIO PROJEKTOWE</span>
+				 -->
+				</div><!--
+				--><div class="column one-third" style="text-align: right;">
+					<p>
+						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
+						telefon: 512 149 366<br />
+						email: <a href="mailto:info@renata-kowalczuk.eu">info@renata-kowalczuk.eu</a>
+					</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
