--- a/index.html
+++ b/index.html
@@ -34,38 +34,71 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
-<body>
-	<div class="hero" style="overflow: hidden;">
-		<div class="container">
-			<img src="images/hero.jpg" style="float: right;" />
-			<h1>Projektowanie Wnętrz</h1>
-			<h2>mgr inż. arch. Renata Kowalczuk</h2>
-		</div>
+<body style="padding-top:80px">
+	<div class="topbar">
+		<img class="logo" src="images/logo.png" />
 	</div>
-	<div class="topbar" style="position: relative;">
-		<ul class="navigation">
-			<li><a href="">galeria</a></li>
-			<li><a href="">kontakt</a></li>
-		</ul>
-	</div>
-	
+
 	<!-- BODY -->
 	<div class="container">
 		<div class="columns">
-			<div class="column one-third">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In egestas tortor dignissim nulla viverra at dignissim nibh iaculis. Donec in hendrerit lacus. Ut eu lorem lectus. Ut vel ligula ligula. Sed sit amet porttitor lorem. Aliquam erat volutpat. Etiam eget vehicula odio. Maecenas hendrerit nulla vel tortor iaculis id semper purus vestibulum.</p>
-			</div><!-- 
-			--><div class="column one-third">
-				<p>Phasellus malesuada gravida ante. Nam sed dolor id sapien lacinia euismod sit amet eget neque. Integer tempus facilisis leo, vel malesuada elit blandit id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas accumsan ullamcorper consectetur. Suspendisse nec eros dolor, eget rutrum turpis. Donec eget cursus purus. Cras urna augue, accumsan non lobortis blandit, vulputate sit amet sapien.</p>
-			</div><!-- 
-			--><div class="column one-third">
-				<p>Phasellus malesuada gravida ante. Nam sed dolor id sapien lacinia euismod sit amet eget neque. Integer tempus facilisis leo, vel malesuada elit blandit id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas accumsan ullamcorper consectetur. Suspendisse nec eros dolor, eget rutrum turpis. Donec eget cursus purus. Cras urna augue, accumsan non lobortis blandit, vulputate sit amet sapien.</p>
+			<div class="column hero" style="text-align:center; margin: 20px 0">
+				<h2>Projektowanie Wnętrz</h2>
+				<p>mgr inż. arch. Renata Kowalczuk</p>
 			</div>
 		</div>
 	</div>
 
-	<div class="container footer">
-		<p>&copy; Renata Kowalczuk 2013</p>
+	<div class="columns" style="padding-top: 40px; padding-bottom: 40px;">
+		<div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/3a.png" />
+				<h4 class="caption">Wnętrza współczesne</h4>
+				<!--<p class="subcaption">Kasia i Rafał, 2013</p>-->
+			</div>
+		</div><!-- 
+		--><div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/2a.png" />
+				<h4 class="caption">Wnętrza stylizowane</h4>
+				<!--<p class="subcaption">Ewa i Tomek, 2012</p>-->
+			</div>
+		</div><!-- 
+		--><div class="column one-third">
+			<div class="gallery-item">
+				<img src="images/index/1a.png" />
+				<h4 class="caption">Wnętrza klasyczne</h4>
+				<!--<p class="subcaption">Mariusz, 2012</p>-->
+			</div>
+		</div>
+	</div>
+
+	<div class="container arrow_box">
+		<div class="columns" style="margin: 20px 0">
+			<div class="column one-half" style="margin-left: 25%;text-align:center;">
+				<p class="subcaption">Myślę i główkuję. Poszukuję i ćwiczę wyobraźnie. Efektem mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="footer" style="margin-top: 40px;">
+		<div class="container">
+			<div class="columns">
+				<div class="column one-third">
+					<!--<p class="name">mgr inż. arch. Renata Kowalczuk</p>-->
+				</div><!-- 
+				--><div class="column one-third">
+					<!--<span class="footer-logo">STUDIO PROJEKTOWE</span>-->
+				</div><!--
+				--><div class="column one-third" style="text-align: right;">
+					<p>
+						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
+						telefon: 512 149 366<br />
+						email: <a href="mailto:info@renata-kowalczuk.eu">info@renata-kowalczuk.eu</a>
+					</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
