--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="columns gallery">
 		<div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/1.jpg" />
+				<img src="images/index/3a.png" />
 				<!-- 
 				 -->
 				<h4 class="caption">Wnętrza <b>współczesne</b></h4>
@@ -52,7 +52,7 @@
 		</div><!-- 
 		--><div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/2.jpg" />
+				<img src="images/index/2a.png" />
 				<!-- 
 				 -->
 				<h4 class="caption">Wnętrza <b>stylizowane</b></h4>
@@ -60,7 +60,7 @@
 		</div><!-- 
 		--><div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/3.jpg" />
+				<img src="images/index/1a.png" />
 				<!-- 
 				 -->
 				<h4 class="caption">Wnętrza <b>klasyczne</b></h4>
