Gray footer, Calibri font

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<div class="column">
 				<h2>Projektowanie Wnętrz</h2>
 				<p>Myślę i główkuję. Poszukuję i ćwiczę wyobraźnię. 
-				<a href="#" class="link">Efektem</a> mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
+				Efektem mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
 			</div>
 		</div>
 	</div>
@@ -94,19 +94,19 @@
 	<div class="footer" style="margin-top: 40px;">
 		<div class="container">
 			<div class="columns">
-				<div class="column one-third">
+				<div class="column_np one-third">
 					
 				</div><!-- 
-				--><div class="column one-third">
+				--><div class="column_np one-third">
 				<!-- 
 					<span class="footer-logo">STUDIO PROJEKTOWE</span>
 				 -->
 				</div><!--
-				--><div class="column one-third" style="text-align: right;">
+				--><div class="column_np one-third" style="text-align: right;">
 					<p>
 						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
 						telefon: 512 149 366<br />
-						email: <a href="mailto:info@renata-kowalczuk.eu">info@renata-kowalczuk.eu</a>
+						email: <!--<a href="mailto:info@renata-kowalczuk.eu">-->info@renata-kowalczuk.eu<!--</a>-->
 					</p>
 				</div>
 			</div>
