Last fixes before deployment

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<img src="images/index/1.jpg" />
 				<!-- 
 				 -->
-				<h4 class="caption">Wnętrza <b>współczesne</b></h4>
+				<h4 class="caption">Wnętrza <b>klasyczne</b></h4>
 			</div>
 		</div><!-- 
 		--><div class="column one-third">
@@ -63,30 +63,24 @@
 				<img src="images/index/3.jpg" />
 				<!-- 
 				 -->
-				<h4 class="caption">Wnętrza <b>klasyczne</b></h4>
+				<h4 class="caption">Wnętrza <b>nowoczesne</b></h4>
 			</div>
 		</div>
 	</div>
 
-	<!-- BODY -->
-	<!-- 
-	<div class="container">
-		<div class="columns">
-			<div class="column hero" style="text-align:center; margin: 20px 0">
-				<h2>Projektowanie Wnętrz</h2>
-				<p>mgr inż. arch. Renata Kowalczuk</p>
-			</div>
-		</div>
-	</div>
-	 -->
-
-	
 	<div class="container arrow_box">
-		<div class="columns" style="margin: 20px 0">
-			<div class="column">
+		<div class="columns" style="margin-top: 20px">
+			<div class="column" style="padding-bottom: 0">
 				<h2>Projektowanie Wnętrz</h2>
 				<p>Myślę i główkuję. Poszukuję i ćwiczę wyobraźnię. 
 				Efektem mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
+			</div>
+		</div>
+		
+		<div class="columns">
+			<div class="column">
+				<h2>Nowość! Projekty na odległość</h2>
+				<p>Istnieje możliwość opracowania projektu dla Inwestora bez konieczności przeprowadzania spotkań w biurze. Sytuacja taka zdarza się wtedy gdy Inwestor dużo podróżuje albo czas spędzany we Wrocławiu nie może przeznaczyć na tematy związane z projektem i wykończeniem lub gdy Inwestor mieszka daleko i chce przygotować mieszkanie/lokal użytkowy na przeprowadzkę. Ustalenia mogą odbywać się podczas wideokonferencji. Prezentacja projektu wygląda podobnie jak na spotkaniu (pełna prezentacja modelu 3D, wraz z jego obrotami i przemieszczaniem się obserwatora; omówienie i prezentacja rysunków technicznych). Niepotrzebna jest znajomość obsługi programów graficznych, wystarczy jedynie podłączenie do Internetu.</p>
 			</div>
 		</div>
 	</div>
@@ -98,14 +92,12 @@
 					
 				</div><!-- 
 				--><div class="column_np one-third">
-				<!-- 
-					<span class="footer-logo">STUDIO PROJEKTOWE</span>
-				 -->
+					
 				</div><!--
 				--><div class="column_np one-third" style="text-align: right;">
 					<p>
 						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
-						telefon: 512 149 366<br />
+						telefon: <strong>512 149 366</strong><br />
 						email: <!--<a href="mailto:info@renata-kowalczuk.eu">-->info@renata-kowalczuk.eu<!--</a>-->
 					</p>
 				</div>
