--- a/index.html
+++ b/index.html
@@ -31,8 +31,18 @@
 	</script>
 	<script src="scripts/less.min.js" type="text/javascript"></script>
 	<!-- END: Development ONLY -->
-	
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-42335134-1', 'renata-kowalczuk.eu');
+		ga('send', 'pageview');
+	</script>
 </head>
 <body style="padding-top:80px">
 	<div class="topbar">
@@ -45,23 +55,23 @@
 		<div class="column one-third">
 			<div class="gallery-item">
 				<img src="images/index/1.jpg" />
-				<!-- 
+				<!--
 				 -->
 				<h4 class="caption">Wnętrza <b>klasyczne</b></h4>
 			</div>
-		</div><!-- 
+		</div><!--
 		--><div class="column one-third">
 			<div class="gallery-item">
 				<img src="images/index/2.jpg" />
-				<!-- 
+				<!--
 				 -->
 				<h4 class="caption">Wnętrza <b>stylizowane</b></h4>
 			</div>
-		</div><!-- 
+		</div><!--
 		--><div class="column one-third">
 			<div class="gallery-item">
 				<img src="images/index/3.jpg" />
-				<!-- 
+				<!--
 				 -->
 				<h4 class="caption">Wnętrza <b>nowoczesne</b></h4>
 			</div>
@@ -72,11 +82,11 @@
 		<div class="columns" style="margin-top: 20px">
 			<div class="column" style="padding-bottom: 0">
 				<h2>Projektowanie Wnętrz</h2>
-				<p>Myślę i główkuję. Poszukuję i ćwiczę wyobraźnię. 
+				<p>Myślę i główkuję. Poszukuję i ćwiczę wyobraźnię.
 				Efektem mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
 			</div>
 		</div>
-		
+
 		<div class="columns">
 			<div class="column">
 				<h2>Nowość! Projekty na odległość</h2>
@@ -89,10 +99,10 @@
 		<div class="container">
 			<div class="columns">
 				<div class="column_np one-third">
-					
-				</div><!-- 
+
+				</div><!--
 				--><div class="column_np one-third">
-					
+
 				</div><!--
 				--><div class="column_np one-third" style="text-align: right;">
 					<p>
