--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 	<div class="columns gallery">
 		<div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/1.jpg" />
+				<a href="albums/kuchnia06/">
+					<img src="images/index/1.jpg" />
+				</a>
 				<!--
 				 -->
 				<h4 class="caption">Wnętrza <b>klasyczne</b></h4>
@@ -74,19 +76,23 @@
 		</div><!--
 		--><div class="column one-third">
 			<div class="gallery-item">
-				<img src="images/index/2.jpg" />
+				<a href="albums/kuchnia05/">
+					<img src="images/index/2.jpg" />
+				</a>
 				<!--
 				 -->
 				<h4 class="caption">Wnętrza <b>stylizowane</b></h4>
 			</div>
 		</div><!--
 		--><div class="column one-third">
-			<div class="gallery-item">
-				<img src="images/index/3.jpg" />
-				<!--
-				 -->
-				<h4 class="caption">Wnętrza <b>nowoczesne</b></h4>
-			</div>
+				<div class="gallery-item">
+					<a href="albums/lazienka01/">
+						<img src="images/index/3.jpg" />
+					</a>
+					<!--
+					 -->
+					<h4 class="caption">Wnętrza <b>nowoczesne</b></h4>
+				</div>
 		</div>
 	</div>
 
