Last changes before second deployment

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 	<div class="topbar">
 		<div class="container">
 			<a href="/"><img class="logo" src="/images/logo.png" style="float: left; width: 300px" /></a>
-			<ul class="navigation" style="float: left; width: 500px">
+			<ul class="navigation" style="float: right; width: 500px; margin-top: 40px; margin-right: 10px; text-align: right;">
 				<!--
 				<li><a class="navigation--link" href="#">Oferta</a></li>
 				 -->
 				<li><a class="navigation--link" href="/albums">Realizacje</a></li>
-				<li><a class="navigation--link" href="#">Kontakt</a></li>
+				<!--<li><a class="navigation--link" href="#">Kontakt</a></li>-->
 				<!--
 				<li><a class="navigation--link" href="#">Inspiracje</a></li>
 				<li><a class="navigation--link" href="#">Referencje</a></li>
@@ -66,7 +66,7 @@
 	<div class="columns gallery">
 		<div class="column one-third">
 			<div class="gallery-item">
-				<a href="albums/kuchnia06/">
+				<a href="albums/kuchnia04/">
 					<img src="images/index/1.jpg" />
 				</a>
 				<!--
