--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 				<li><a class="navigation--link" href="#">Oferta</a></li>
 				 -->
 				<li><a class="navigation--link" href="/albums">Realizacje</a></li>
-				<li><a class="navigation--link" href="/contact.html">Kontakt</a></li>
+				<li><a class="navigation--link navigation--active" href="/contact.html">Kontakt</a></li>
 				<!--
 				<li><a class="navigation--link" href="#">Inspiracje</a></li>
 				<li><a class="navigation--link" href="#">Referencje</a></li>
@@ -63,52 +63,22 @@
 		</div>
 	</div>
 
-	<div class="columns gallery">
-		<div class="column one-third">
-			<div class="gallery-item">
-				<a href="albums/kuchnia04/">
-					<img src="images/index/1.jpg" />
-				</a>
-				<!--
-				 -->
-				<h4 class="caption">Wnętrza <b>klasyczne</b></h4>
-			</div>
-		</div><!--
-		--><div class="column one-third">
-			<div class="gallery-item">
-				<a href="albums/kuchnia05/">
-					<img src="images/index/2.jpg" />
-				</a>
-				<!--
-				 -->
-				<h4 class="caption">Wnętrza <b>stylizowane</b></h4>
-			</div>
-		</div><!--
-		--><div class="column one-third">
-				<div class="gallery-item">
-					<a href="albums/lazienka01/">
-						<img src="images/index/3.jpg" />
-					</a>
-					<!--
-					 -->
-					<h4 class="caption">Wnętrza <b>nowoczesne</b></h4>
-				</div>
-		</div>
-	</div>
+	
 
 	<div class="container arrow_box">
 		<div class="columns" style="margin-top: 20px">
 			<div class="column" style="padding-bottom: 0">
-				<h2>Projektowanie Wnętrz</h2>
-				<p>Myślę i główkuję. Poszukuję i ćwiczę wyobraźnię.
-				Efektem mają być przyjazne biura na miarę XXI wieku, kuchnie w najlepszym smaku, salony łazienkowe, relaksacyjne i przebojowe pokoje, salony kosmetyczne, sklepy, gabinety, przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia. Resztą zajmie się wyobraźnia.</p>
+				<h2>Projektowanie Wnętrz - Wrocław</h2>
+				<p>mgr inż. arch. Renata Kowalczuk<br />
+					telefon: <strong>+48 512 149 366</strong><br />
+					email: <a href="mailto:info@renata-kowalczuk.eu">info@renata-kowalczuk.eu</a><br />
+					adres: ul. Rymarska 47/23, 53-206 Wrocław</p>
 			</div>
 		</div>
 
 		<div class="columns">
 			<div class="column">
-				<h2>Nowość! Projekty na odległość</h2>
-				<p>Istnieje możliwość opracowania projektu dla Inwestora bez konieczności przeprowadzania spotkań w biurze. Sytuacja taka zdarza się wtedy gdy Inwestor dużo podróżuje albo czas spędzany we Wrocławiu nie może przeznaczyć na tematy związane z projektem i wykończeniem lub gdy Inwestor mieszka daleko i chce przygotować mieszkanie/lokal użytkowy na przeprowadzkę. Ustalenia mogą odbywać się podczas wideokonferencji. Prezentacja projektu wygląda podobnie jak na spotkaniu (pełna prezentacja modelu 3D, wraz z jego obrotami i przemieszczaniem się obserwatora; omówienie i prezentacja rysunków technicznych). Niepotrzebna jest znajomość obsługi programów graficznych, wystarczy jedynie podłączenie do Internetu.</p>
+				<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=pl&amp;geocode=&amp;q=51.080187,16.988874&amp;aq=&amp;sll=51.127065,16.991864&amp;sspn=0.244339,0.676346&amp;t=h&amp;ie=UTF8&amp;ll=51.085787,16.992073&amp;spn=0.01887,0.036478&amp;z=14&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=pl&amp;geocode=&amp;q=51.080187,16.988874&amp;aq=&amp;sll=51.127065,16.991864&amp;sspn=0.244339,0.676346&amp;t=h&amp;ie=UTF8&amp;ll=51.085787,16.992073&amp;spn=0.01887,0.036478&amp;z=14" style="color:#0000FF;text-align:left">Wyświetl większą mapę</a></small>
 			</div>
 		</div>
 	</div>
