Fixed typos and grammar

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="columns">
 			<div class="column">
 				<h2>Nowość! Projekty na odległość</h2>
-				<p>Istnieje możliwość opracowania projektu dla Inwestora bez konieczności przeprowadzania spotkań w biurze. Sytuacja taka zdarza się wtedy gdy Inwestor dużo podróżuje albo czas spędzany we Wrocławiu nie może przeznaczyć na tematy związane z projektem i wykończeniem lub gdy Inwestor mieszka daleko i chce przygotować mieszkanie/lokal użytkowy na przeprowadzkę. Ustalenia mogą odbywać się podczas wideokonferencji. Prezentacja projektu wygląda podobnie jak na spotkaniu (pełna prezentacja modelu 3D, wraz z jego obrotami i przemieszczaniem się obserwatora; omówienie i prezentacja rysunków technicznych). Niepotrzebna jest znajomość obsługi programów graficznych, wystarczy jedynie podłączenie do Internetu.</p>
+				<p>Istnieje możliwość opracowania projektu dla Inwestora bez konieczności przeprowadzania spotkań w biurze. Sytuacja taka zdarza się gdy Inwestor dużo podróżuje albo czasu spędzanego we Wrocławiu nie może przeznaczyć na tematy związane z projektem i wykończeniem lub gdy Inwestor mieszka daleko i chce przygotować mieszkanie/lokal użytkowy do przeprowadzki. Ustalenia mogą odbywać się podczas wideokonferencji. Prezentacja projektu wygląda podobnie jak na spotkaniu (pełna prezentacja modelu 3D, wraz z jego obrotami i przemieszczaniem się obserwatora; omówienie i prezentacja rysunków technicznych). Niepotrzebna jest znajomość obsługi programów graficznych, wystarczy jedynie podłączenie do Internetu.</p>
 			</div>
 		</div>
 	</div>
