--- a/offer.html
+++ b/offer.html
@@ -68,11 +68,11 @@
 			<div class="column">
 				<h1>Oferta</h1>
 
-				<p>Projektowanie wnętrz jest autorskim opracowaniem ułatwiającym i usprawniającym wykończenie wnętrza, podnoszącym jego estetykę oraz dającym poczucie, że wnętrze jest dobrze dopasowanego do indywidualnych potrzeb nowych użytkowników.</p>
+				<p>Projektowanie wnętrz jest autorskim opracowaniem ułatwiającym i usprawniającym ich wykończenie, podnoszącym estetykę oraz dającym poczucie, że są one dobrze dopasowanego do indywidualnych potrzeb swoich użytkowników.</p>
 
 				<h3>Wnętrza, które chcą być zaprojektowane:</h3>
 				<ul>
-					<li>domy i mieszkania (począwszy od stanu deweloperskiego);</li>
+					<li>domy i mieszkania (począwszy od stanu deweloperskiego),</li>
 					<li>biura,</li>
 					<li>salony kosmetyczne i fryzjerskie,</li>
 					<li>gabinety lekarskie i dentystyczne,</li>
@@ -85,7 +85,7 @@
 					<li>sale konferencyjne,</li>
 					<li>stoiska wystawiennicze i handlowe,</li>
 					<li>sale sportowe i rekreacyjne,</li>
-					<li>spa;</li>
+					<li>spa.</li>
 				</ul>
 			</div>
 		</div>
@@ -96,9 +96,8 @@
 
 				<h2>Inwentaryzacja</h2>
 
-				<p>Inwentaryzacja budowlana jest szczegółowym odwzorowaniem stanu istniejącego budynku/wnętrza w postaci dokumentacji papierowej i/lub elektronicznej i stanowi podkład do dalszych prac projektowych. Polega na wykonaniu rysunków i opisu istniejącego stanu obiektu lub jego części na podstawie aktualnych pomiarów. Dodatkowo inwentaryzacja może zawierać bryłe 3D mierzonego obiektu. Jest niezbędna do wykonania projektu wnętrz gdy brakuje dokładnego rzutu lokalu oraz konieczna do projektu indywidualnej zabudowy meblowej. Wykonana dokumentacja wydawana jest w formie papierowej (ilość egzemplarzy do uzgodnienia) oraz w formie elektronicznej (format DWG, PDF, JPG).</p>
-				<p>Rozszerzona dokumentacja inwentaryzacyjna wnętrza zawiera dodatkowo zdjęcia. Fotografie obrazują szczegółowo stan obiektu przed przebudową lub remontem. Taka dokumentacja jest niezbędna do szczegółowej analizy projektu, planowaniu remontów, planowaniu wystroju i adaptacji, określaniu stanu technicznego obiektu (ściany, wymalowania, uszkodzenia itp.), a także dla celów archiwalnych, dla dokumentowania stanu robót, dokumentowanie stanu faktycznego przed sprzedażą, wynajmem lub wykończeniem lokalu i budynku (przed rozpoczęciem inwestycji). Ujęcia wykonywane są we wnętrzu z kilku kierunków, obejmują wszystkie przegrody budowlane i  pokazują rzeczywisty charakter istniejącego oświetlenia i ewentualny nastrój panujący w tym pomieszczeniu.</p>
-				<!--<a href="http://www.wymiar.eu/przepisy-ustawy-normy-inwentaryzacji.htm">http://www.wymiar.eu/przepisy-ustawy-normy-inwentaryzacji.htm</a>-->
+				<p>Inwentaryzacja budowlana jest szczegółowym odwzorowaniem stanu istniejącego budynku/wnętrza w postaci dokumentacji papierowej i/lub elektronicznej stanowiącym podkład do dalszych prac projektowych. Polega na wykonaniu rysunków i opisu istniejącego stanu obiektu lub jego części na podstawie aktualnych pomiarów. Dodatkowo inwentaryzacja może zawierać bryłę 3D mierzonego obiektu. Jest niezbędna do wykonania projektu wnętrz gdy brakuje dokładnego rzutu lokalu oraz konieczna do projektu indywidualnej zabudowy meblowej. Wykonana dokumentacja wydawana jest w formie papierowej (ilość egzemplarzy do uzgodnienia) oraz w formie elektronicznej (format DWG, PDF, JPG).</p>
+				<p>Rozszerzona dokumentacja inwentaryzacyjna wnętrza zawiera dodatkowo zdjęcia. Fotografie obrazują szczegółowo stan obiektu przed przebudową lub remontem. Taka dokumentacja jest niezbędna do szczegółowej analizy projektu, planowania remontów, planowania wystroju i adaptacji, określania stanu technicznego obiektu (ściany, wymalowania, uszkodzenia itp.), a także dla celów archiwalnych, do udokumentowania stanu robót czy stanu faktycznego przed sprzedażą, wynajmem lub wykończeniem lokalu i budynku (przed rozpoczęciem inwestycji). Ujęcia wykonywane są we wnętrzu z kilku kierunków, obejmują wszystkie przegrody budowlane i  pokazują rzeczywisty charakter istniejącego oświetlenia i ewentualny nastrój panujący w tym pomieszczeniu.</p>
 			</div>
 		</div>
 
@@ -107,17 +106,17 @@
 				<h2>Projekt wnętrz</h2>
 
 				<h3>Od projektu koncepcyjnego</h3>
-				<p>Jest to pracowanie przedstawiające pomysł na wnętrze z uwzględnieniem istniejących uwarunkowań i indywidualnych potrzeb użytkownika przestrzeni. Zaczyna się od rozpoznania wnętrza (wizyta na budowie) i poznania oczekiwań Inwestora. Efektem są koncepcje projektowe, które następnie są omawiana, tak aby ostatecznie wybrać jedno rozwiązanie. Ten etap jest niezwykle istotny, gdyż wymaga bardzo indywidualnego podejścia do potrzeb estetycznych użytkownika/użytkowników. Ostateczna koncepcja zazwyczaj klaruje się po kilku spotkaniach i rozmowach.</p>
-				<p>Opracowanie składa się z rzutów układu funkcjonalno-przestrzennego oraz modelu przestrzennego (3D) wraz z elementami wystroju wnętrz - projektowane zmiany w zabudowie suchej (płyty gk) ścian i sufitów, wyposażenie w meble i urządzenia sanitarne.</p>
+				<p>Jest to opracowanie przedstawiające pomysł na wnętrze z uwzględnieniem istniejących uwarunkowań i indywidualnych potrzeb użytkownika przestrzeni. Zaczyna się od rozpoznania wnętrza (wizyta na budowie) i poznania oczekiwań Inwestora. Efektem są koncepcje projektowe, które następnie są omawiane, tak aby ostatecznie wybrać jedno rozwiązanie. Ten etap jest niezwykle istotny, gdyż wymaga bardzo indywidualnego podejścia do potrzeb estetycznych użytkownika/użytkowników. Ostateczna koncepcja zazwyczaj klaruje się po kilku spotkaniach i rozmowach.</p>
+				<p>Opracowanie składa się z rzutów układu funkcjonalno-przestrzennego oraz modelu przestrzennego (3D) wraz z elementami wystroju wnętrz - projektowanych zmian w zabudowie suchej (płyty gk) ścian i sufitów, wyposażeniem w meble i urządzenia sanitarne.</p>
 
 				<h3>Uszczegółowianie koncepcji</h3>
-				<p>Gdy ogólny wygląd bryłowy wnętrza zostanie ustalony wprowadzone są kolejne niezbędne informacje- kolory i materiały. Służą temu wizyty w sklepach. Wybierane są posadzki, armatura sanitarna, drzwi wewnętrzne, wykończenia ścian, w kolejnym etapie następuje wybór mebli, opraw oświetleniowych, wyposażenia dekoracyjnego (okien - zasłony, rolety; podłóg - wykładziny, dywany).</p>
+				<p>Gdy ogólny wygląd bryłowy wnętrza zostanie ustalony wprowadzane są kolejne niezbędne informacje - kolory i materiały. Służą temu wizyty w sklepach. Wybierane są posadzki, armatura sanitarna, drzwi wewnętrzne, wykończenia ścian, a w kolejnym etapie następuje wybór mebli, opraw oświetleniowych i wyposażenia dekoracyjnego (okien - zasłony, rolety; podłóg - wykładziny, dywany).</p>
 
 				<h3>Projekt wykonawczy</h3>
-				<p>Po ustaleniu jak ma wyglądać wnętrze, należy przygotować rysunki na budowę, aby wykonawcy mogli urzeczywistnić narysowane marzenia. Projekt wykonawczy wydawany jest w języku zrozumiałym przez ekipy budowlane czyli zwymiarowane rysunki techniczne wraz z niezbędnym opisem. Są to rzuty podłóg i sufitów (jeżeli projekt przewiduje zmiany), niezbędne widoki ścian, widoki perspektywiczne lub aksonometryczne. Na podstawie tak przygotowanej dokumentacji pracownicy wykonają, bez zbędnych pytań do Inwestora, następujący zakres prac: </p>
+				<p>Po ustaleniu jak ma wyglądać wnętrze, należy przygotować rysunki na budowę, aby wykonawcy mogli urzeczywistnić narysowane marzenia. Projekt wykonawczy wydawany jest w języku zrozumiałym przez ekipy budowlane czyli w formie zwymiarowanych rysunków technicznych wraz z niezbędnym opisem. Są to rzuty podłóg i sufitów (jeżeli projekt przewiduje zmiany), niezbędne widoki ścian, widoki perspektywiczne lub aksonometryczne. Na podstawie tak przygotowanej dokumentacji pracownicy wykonają, bez zbędnych pytań do Inwestora, prace w następującym zakresie:</p>
 				<ul>
 					<li>zabudowa sucha (z płyt gk) ścianek, sufitów, wnęk- usunięcie i/lub postawienie nowych,</li>
-					<li>wewnętrzną instalację elektryczną i wodno-kanalizacyjną, </li>
+					<li>wewnętrzna instalacja elektryczna i wodno-kanalizacyjna, </li>
 					<li>wykonają posadzki i ściany o prawidłowym układzie elementów (kierunki układania desek, płytek, zestawienie materiałów),</li>
 					<li>pomalują odpowiednie ściany w odpowiednim kolorze.</li>
 				</ul>
@@ -128,7 +127,7 @@
 			<div class="column">
 				<h2>Projekty indywidualnej zabudowy meblowej</h2>
 
-				<p>Zwykle do pełnego wykończenia wnętrza potrzebny jest indywidualny projekt mebli, dotyczy to szczególnie szaf i mebli kuchennych, jak również biurowych, recepcyjnych, hotelowych, gabinetowych, handlowych. Projekt mebli na zamówienie opracowywany jest najefektywniej przez autora projektu wnętrz (zgodność kompozycji) we współpracy z przedstawicielami wykonawcy (szczegóły techniczne stosowanych rozwiązań). Rezultatem będzie dobry produkt, pasujący do wnętrza i wygodny do korzystania przez docelowego użytkownika.</p>
+				<p>Zwykle do pełnego wykończenia wnętrza potrzebny jest indywidualny projekt mebli, dotyczy to szczególnie szaf i mebli kuchennych, jak również biurowych, recepcyjnych, hotelowych, gabinetowych, handlowych. Projekt mebli na zamówienie opracowywany jest najefektywniej przez autora projektu wnętrz (zgodność kompozycji), we współpracy z przedstawicielami wykonawcy (szczegóły techniczne stosowanych rozwiązań). Rezultatem będzie dobry produkt, pasujący do wnętrza i wygodny do korzystania przez docelowego użytkownika.</p>
 			</div>
 		</div>
 
@@ -136,7 +135,7 @@
 			<div class="column">
 				<h2>Nadzory autorskie, nadzory inwestorskie - koordynowanie prac wykończeniowych</h2>
 
-				<p>Aby zaoszczędzić czas Inwestora możliwe jest również wykonanie nadzoru o różnym zakresie - nadzór autorski (sprawdzenie zgodności wykonania z projektem) bądź nadzór inwestorski - koordynowanie prac wykończeniowych (wizyty na budowie w celu dopilnowania poprawności wykonywanych prac na każdym etapie, konsultacje z wykonawcami i omówienie nietypowych rozwiązań projektowych, zgranie w czasie wykonania wszystkich elementów ujętych w projekcie). Nadzór inwestorski zwalnia klienta z częstych wizyt na budowie. Realizacja przebiega sprawniej i zgodnie z projektem. Inwestor uczestniczy głównie w etapie projektowym, na etapie realizacji informowany jest o przebiegu prac (uszczegółowienie przekazywanych informacji ustalane jest z Inwestorem).<p>
+				<p>Aby zaoszczędzić czas Inwestora możliwe jest również wykonanie nadzoru o różnym zakresie - nadzoru autorskiego (sprawdzenie zgodności wykonania z projektem) bądź nadzoru inwestorskiego (koordynowanie prac wykończeniowych - wizyty na budowie w celu dopilnowania poprawności wykonywanych prac na każdym etapie, konsultacje z wykonawcami i omówienie nietypowych rozwiązań projektowych, zgranie w czasie wykonania wszystkich elementów ujętych w projekcie). Nadzór inwestorski zwalnia klienta z częstych wizyt na budowie. Realizacja przebiega sprawniej i zgodnie z projektem. Inwestor uczestniczy głównie w etapie projektowym, na etapie realizacji informowany jest o przebiegu prac (uszczegółowienie przekazywanych informacji ustalane jest z Inwestorem).<p>
 				<p>Dodatkowo w trakcie nadzoru inwestorskiego wykonywana jest dokumentacja fotograficzna (przebieg instalacji we wnętrzu) ułatwiająca dokonanie zmian instalacji w przyszłości. Dokumentacja wydawana jest w formie fotografii cyfrowej obiektu (format  JPG) oraz rzutu z zaznaczeniem miejsc fotografowanych oraz lokalizacji fotografa.</p>
 			</div>
 		</div>
@@ -153,8 +152,8 @@
 			<div class="column">
 				<h2>Satysfakcja jest bezcenna! Projekt da się wycenić</h2>
 
-				<p>Jako że projekt wnętrz nie jest produktem typowym, wycena takiej usługi też jest wyliczana indywidualnie w zależności od zakresu opracowania, powierzchni i funkcji pomieszczeń oraz terminu realizacji.</p>
-				<p>Inwestor określa zakres usług, może to być jedynie projekt koncepcyjny, koncepcja uszczegółowiona, koncepcja wraz z projektem wykonawczym lub usługa kompleksowa, gdzie Inwestor kontaktuje się tylko z projektantem. Projektant zajmuję się całą obsługą (inwentaryzacja przedprojektowa, szczegółowy projekt koncepcyjny, wykonawczy, koordynowanie prac w lokalu, nadzór, dokumentacja powykonawcza).</p>
+				<p>Jako, że projekt wnętrz nie jest produktem typowym, wycena takiej usługi też jest wyliczana indywidualnie w zależności od zakresu opracowania, powierzchni i funkcji pomieszczeń oraz terminu realizacji.</p>
+				<p>Inwestor określa zakres usług - może to być jedynie projekt koncepcyjny, koncepcja uszczegółowiona, koncepcja wraz z projektem wykonawczym lub usługa kompleksowa, gdzie Inwestor kontaktuje się tylko z projektantem, a ten zajmuję się całą obsługą inwestycji (inwentaryzacja przedprojektowa, szczegółowy projekt koncepcyjny, wykonawczy, koordynowanie prac w lokalu, nadzór, dokumentacja powykonawcza).</p>
 			</div>
 		</div>
 	</div>
