--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<title>Projektowanie Wnętrz - Renata Kowalczuk</title>
+	<title>Projektowanie Wnętrz - Renata Moskwa</title>
 	<meta name="keywords" content="Projektowanie Wnętrz">
 	<meta name="description" content="">
 
@@ -122,7 +122,7 @@
 				</div><!--
 				--><div class="column one-third" style="text-align: right; padding-bottom: 5px;">
 					<p>
-						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
+						mgr inż. arch. <span class="name">Renata Moskwa (Kowalczuk)</span><br />
 						telefon: <strong>512 149 366</strong><br />
 						email: info@renata-kowalczuk.eu
 					</p>
